@@ -5,6 +5,9 @@ Changes for Crate-Java-Testing
 Unreleased
 ==========
 
+ * make methods `start` cluster, `prepareEnvironment`, `before`
+   and `after` of CrateTestCluster public.
+
 2016/03/14 0.4.1
 ================
 
